--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,6 +28,10 @@
       <div class="footer-col footer-col-3">
         <p>{{ site.description[page.lang] }}</p>
       </div>
+
+      <div class="footer-col footer-col-4">
+         <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a>
+      </div>
     </div>
 
   </div>
