--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -95,6 +95,7 @@ body {
         .page-link {
             display: block;
             padding: 5px 10px;
+            color: black;
 
             &:not(:last-child) {
                 margin-right: 0;
