Make header reappear when cursor moves to top.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,7 @@
+<div class="hover-trigger"></div>
+
+<div class="hover-trigger-blocker"></div>
+
 <header class="site-header">
 
   <div class="wrapper">
