Format front page quote

--- a/_includes/boethius_quote.html
+++ b/_includes/boethius_quote.html
@@ -1,4 +1,6 @@
-<blockquote class="landing-quote">
-  Respicite caeli spatium, firmitudinem, celeritatem et aliquando desinite vilia mirari.
-  <cite>Boethius</cite>
-</blockquote>
+<div class="quote-container">
+  <blockquote class="landing-quote">
+    Respicite caeli spatium, firmitudinem, celeritatem et aliquando desinite vilia mirari.
+    <cite>Boethius</cite>
+  </blockquote>
+</div>
