--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -238,6 +238,7 @@ body {
 .post-list {
     margin-left: 0;
     list-style: none;
+    margin-top: 50px;
 
     > li {
         margin-bottom: $spacing-unit;
@@ -299,4 +300,46 @@ body {
             font-size: 18px;
         }
     }
+}
+
+/**
+ * Front Page
+ */
+.landing-quote {
+  border: none;
+  margin-top: 50px;
+  font-size: 30px;
+  letter-spacing: 0px;
+
+  > cite {
+    font-style: normal;
+    &:before {
+      content: "—";
+    }
+  }
+}
+
+.quote-container {
+  margin-top: 50px;
+  padding-bottom: 30px;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+
+  &:before {
+    content: "“";
+    font-size: 80px;
+    position: absolute;
+    line-height: 1px;
+    margin-left: -20px;
+    margin-top: 60px;
+    color: $grey-color;
+  }
+  &:after {
+    content: "”";
+    font-size: 80px;
+    float: right;
+    line-height: 50px;
+    margin-top: -20px;
+    color: $grey-color;
+  }
 }
