--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -268,6 +268,7 @@ body {
     font-size: 42px;
     letter-spacing: -1px;
     line-height: 1;
+    margin-top: 40px;
 
     @include media-query($on-laptop) {
         font-size: 36px;
