--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -303,6 +303,58 @@ body {
     }
 }
 
+.side-box {
+  float: right;
+  border: 2px solid $grey-color;
+  padding: 15px;
+  margin: 15px 0px 15px 15px;
+  max-width: 200px;
+
+  @include media-query($on-palm) {
+    width: 90%;
+    max-width: 90%;
+    margin: 0px 0px 20px 0px;
+    float: left;
+  }
+
+  h4 {
+    color: $grey-color-dark;
+    margin-bottom: 0px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid $grey-color-dark;
+  }
+
+  ul {
+    list-style: none;
+    margin-left: 0px;
+    margin-bottom: 0px;
+    padding-top: 5px;
+  }
+}
+
+.example-image-wrapper {
+  float: right;
+  margin: 0px 0px 15px 15px;
+
+  img {
+    border: 1px solid black;
+  }
+
+  p {
+    text-align: center;
+  }
+
+  @include media-query($on-palm) {
+    margin: 0px 0px 0px 15px;
+    width: 100%;
+
+    img {
+      width: 100%;
+    }
+  }
+
+}
+
 /**
  * Front Page
  */
