--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,9 @@
       <div class="trigger">
         {% assign pages=site.pages | where:"lang", page.lang %}
         {% for my_page in pages %}
-          {% if my_page.title %}
+          {% if my_page.type == page.type and my_page.type %}
+          <a class="page-link active-page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
+          {% elsif my_page.title %}
           <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
           {% endif %}
         {% endfor %}
