--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -284,6 +284,7 @@ body {
 
     h2 {
         font-size: 26px;
+        margin-top: $spacing-unit;
 
         @include media-query($on-laptop) {
             font-size: 28px;
