--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,7 @@
       </a>
 
       <div class="trigger">
+        <a class="page-link" href="{{ site.baseurl }}/{{ site.index[page.lang] }}">{{ site.index.title[page.lang] }}</a>
         {% assign pages=site.pages | where:"lang", page.lang %}
         {% for my_page in pages %}
           {% if my_page.type == page.type and my_page.type %}
